# webappsec

./: .env.example  .gitignore  AISecurityEngineerUXRoadmap.md  Architecture.md  BENCHMARKS.md  CLAUDE.md  README.md  completeroadmap.md  deploy.md  docker-compose.yml  package-lock.json  roadmap.md  tools-wishlist.md  usage.md  wrapper-wishlist.md
.github/workflows/: benchmark.yml
bench/: .gitignore  README.md  run.py  score.py
bench/ground_truth/: altoro-mutual.json  dvwa.json  juice-shop.json  nodegoat.json  testphp-vulnweb.json
bench/results/: BENCHMARKS.json  BENCHMARKS.md
bench/targets/: altoro-mutual.yaml  dvwa.yaml  juice-shop.yaml  nodegoat.yaml  testphp-vulnweb.yaml
docs/: Isolation.md  ToolCall.md  agent-toolcalls.md  blog-pipeline.md  data-flow.md  feature.md  multiagent.md  orchestration-logic.md  roadmap.md  user-inputs.md  webapp-supabase-design.md
webapp/: README.md  usage.md
webapp/worker/: .env.example  Dockerfile  README.md  fly.toml  pyproject.toml
webapp/worker/scripts/: assess_findings.py
webapp/worker/src/strix_worker/: __init__.py  __main__.py  code_context.py  config.py  credentials.py  discovery.py  instruction.py  listener.py  notifier.py  pr_comment_dispatch.py  runner.py  summary.py  supabase_client.py  triage.py
webapp/worker/tests/: test_cloud_account_target.py  test_code_context.py  test_credentials.py  test_discovery.py  test_instruction.py  test_listener.py  test_live_probe_env.py  test_notifier.py  test_pr_comment_dispatch.py  test_runner.py  test_summary.py  test_supabase_workflows.py  test_triage.py
(+341 files in other folders)
