[project]
name = "strix-worker"
version = "0.1.0"
description = "Picks up queued Strix scans from Supabase and orchestrates the Strix CLI"
requires-python = ">=3.12"
authors = [{ name = "Strix Web App" }]
license = "Apache-2.0"

dependencies = [
  "supabase>=2.5.0",
  "psycopg[binary]>=3.2.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "structlog>=24.1.0",
  "boto3>=1.34.0",                  # AWS sts:AssumeRole
  "python-dotenv>=1.0.0",
]

[project.scripts]
strix-worker = "strix_worker.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/strix_worker"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "S", "RUF"]
ignore = ["S101"]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
]
